--- a/42_cpp_module_05/ex03/Makefile
+++ b/42_cpp_module_05/ex03/Makefile
@@ -6,12 +6,12 @@
 #    By: smontuor <smontuor@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/02 12:10:05 by smontuor          #+#    #+#              #
-#    Updated: 2024/10/29 23:40:28 by smontuor         ###   ########.fr        #
+#    Updated: 2024/10/29 23:55:16 by smontuor         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 #----Program name---------------------------------------------#
-NAME = Driiiiiill
+NAME = ViPregoBasta
 DEBUG_NAME = $(NAME)_debug
 #-------------------------------------------------------------#
 
